workspace-sf/force-app/main/default/objects/ConjuntoInformacoes__c/ConjuntoInformacoes__c.object-meta.xml
<CustomObject>
    <label>Conjunto de Informações</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conjunto de Informações</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>