workspace-sf/force-app/main/default/objects/ConjuntoInformacoes__c/fields/GeradorOfertas__c.field-meta.xml
<CustomField>
    <fullName>GeradorOfertas__c</fullName>
    <label>Gerador de Ofertas</label>
    <referenceTo>GeradorOferta__c</referenceTo>
    <relationshipLabel>Conjunto de Informações</relationshipLabel>
    <relationshipName>ConjuntoInformacoes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>