workspace-sf/force-app/main/default/objects/ConjuntoInformacoes__c/fields/Identificador__c.field-meta.xml
<CustomField>
    <fullName>Identificador__c</fullName>
    <label>Identificador</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>