workspace-sf/force-app/main/default/objects/ConjuntoInformacoes__c/fields/subtitulo__c.field-meta.xml
<CustomField>
    <fullName>subtitulo__c</fullName>
    <label>Subtítulo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>