workspace-sf/force-app/main/default/objects/ConjuntoInformacoes__c/fields/titulo__c.field-meta.xml
<CustomField>
    <fullName>titulo__c</fullName>
    <label>Título</label>
    <length>255</length>
    <type>Text</type>
</CustomField>